# ml-basics-training

./: .gitattributes  01_ml_one_feature_regression.py  02_ml_multi_feature_regression.py  03_ml_housing_regression.py  04_ml_breast_cancer_classification.py  05_dl_housing_regression.py  06_dl_breast_cancer_classification.py  07_dl_imdb_classification.py  08_rest_api_classifier.py  LICENSE  README.md  pyproject.toml
data/: breast_cancer.csv  housing.csv  imdb.csv  ml-basics.postman_collection.json
models/: imdb_classifier.pth  imdb_classifier_params.json  imdb_classifier_vocab.json
